# predictday-settlement

./: .gitignore  01_auth_subscribe.mjs  02_validate_stat.mjs  03_cpi_settle.mjs  DEMO.md  README.md  REVIEW-RESPONSE.md  auth-guest.md  demo.sh  fixtures-snapshot.md  package-lock.json  package.json  proof-endpoint.md  scores-full.md
app/: verifiable-resolution.html
cpi-program/: Cargo.toml  PROGRAM_ID.txt
cpi-program/src/: lib.rs
predictday_settlement/: Anchor.toml  PROGRAM_ID.txt  e2e.mjs
predictday_settlement/programs/predictday_settlement/: Cargo.toml
predictday_settlement/programs/predictday_settlement/src/: lib.rs  txoracle_cpi.rs
src/: gen_receipt.mjs  keeper.mjs  txline.js
